@@ -1,3 +1,8 @@
+2013-06-18  Frank Warmerdam  <warmerdam@google.com>
+
+	* src/PJ_healpix.c: rename sign() to pj_sign() and make it static.  No
+	need to risk conflicting with sign() in other packages like gctpc.
+
 2012-12-17  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_init.c: Recover gracefully if setlocale() returns NULL
